[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PowerBlur"
version = "0.1.0"
authors = [
  { name="校溯", email="xiaosu-1009@qq.com" },
  { name="徐付豫", email="xufuyu-mg@outlook.com" },
]
description = "PowerBlur is an image blur processing tool based on Pillow..."
readme = "README.md"
requires-python = ">=3.0"
license = { file = "LICENSE" }
keywords = ["blur", "image-processing", "pillow"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Pillow",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/xiaosuyyds/PowerBlur/"

# 关键配置：声明包的位置
[tool.setuptools]
package-dir = { "" = "src" }
packages = ["PowerBlur"]  # 如果包名与文件夹名称不同需要修改

# 可选：包含静态文件（如果有需要）
[tool.setuptools.package-data]
PowerBlur = ["*.md"]
